--- a/beEx/src/main/res/values/strings.xml
+++ b/beEx/src/main/res/values/strings.xml
@@ -3,5 +3,10 @@
 
     <string name="app_name">beEx</string>
     <string name="title_mailitem_detail">MailItem Detail</string>
-
+    <string name="menu_refresh">Refresh</string>
+    <string name="menu_location">Location</string>
+    <string name="menu_settings">Settings</string>
+    <string name="main_description">This is a basic Activity showing an
+        Action Bar. Items that are not shown as action items on the Action Bar are displayed in
+        the action bar overflow.</string>
 </resources>
